fix: ongoing header malaria AB#26935

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -335,6 +335,7 @@
       },
       "active-event-active-trigger": {
         "header": "Alert: {{ disasterTypeLabel }}",
+        "header-ongoing": "Ongoing alert: {{ disasterTypeLabel }}",
         "welcome": "An alert for <strong>{{ disasterTypeLabel }}</strong> was issued on <strong>{{ startDate }}</strong>. The alert is issued for <strong>{{ firstLeadTimeDate }}</strong>."
       },
       "active-event": {
