feat: add aggregate population AB#27281

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -165,6 +165,7 @@
       "event-switcher": {
         "current-event-message": "Back to national view",
         "switch-event-button": "Show prediction"
+        "exposed-areas": "Exposed {{adminAreaLabelPlural}}:",
       }
     },
     "flash-floods": {
