feat: add disclaimer to indicate approximate numbers

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -71,6 +71,9 @@
     "plural-suffix": "(s)",
     "not-applicable": "N/A"
   },
+  "disclaimer-approximate-component": {
+    "message": "All numbers are approximate and meant to be used as guidance."
+  },
   "areas-of-focus-summary-component": {
     "title": "Actions Summary",
     "aof-subtitle": "Sector",
