--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -19,6 +19,10 @@
       "copy-instructions": "Alert data can be copied into a spreadsheet by clicking on the \"Copy to clipboard\" button on the right."
     }
   },
+  "status-report-page": {
+    "dev-menu-link": "Open status report page",
+    "page-title": "IBF status report"
+  },
   "login-page": {
     "title": "Login",
     "welcome": "Hello! Welcome to IBF.",
