fix: process PR comments

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -21,7 +21,8 @@
   },
   "status-report-page": {
     "dev-menu-link": "Open status report page",
-    "page-title": "IBF status report"
+    "page-title": "IBF status report",
+    "no-data": "No data"
   },
   "login-page": {
     "title": "Login",
