refactor: replace last model date with last upload date

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -92,7 +92,7 @@
     "common": {
       "no-info": "No information available",
       "warn-label": {
-        "message": "Hello {{ name }}. The information in this portal is based on the model last run on <strong>{{lastModelRunDate}}</strong>.",
+        "message": "Hello {{ name }}. The information in this portal is based on the model last run on <strong>{{lastUploadDate}}</strong>.",
         "tooltip": "The forecast presented on the portal might not be up to date as the model did not run successfully. Contact {{supportEmailAddress}} for further information."
       },
       "event-tooltip": "Select an area from this list or the map to monitor, manage the trigger, and the preplanned anticipatory actions (if applicable).",
